# concenews

./: CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
concenews-backend/: .env.example  .env.test  .gitignore  CLAUDE.md  conftest.py  main.py  pyproject.toml
concenews-backend/alembic/: env.py
concenews-backend/alembic/versions/: 209bf6bdd659_news_table.py  3e9fcf0f6d4e_market_snapshot_table.py  52f7d8a55ac1_market_classification_table.py  a381045fd831_news_table.py
concenews-backend/docs/: integration.md  modular-monolith.md  plan-market-tracking.md  plan-news-collection.md  plan-news-fetch.md  spec-market-tracking.md  spec-news-collection.md  spec-news-fetch.md  spike-process.md
concenews-backend/docs/architecture/: boundaries.md  modular-monolith.md  module-internals.md
concenews-backend/docs/conventions/: docstring.md  immutability.md  testing.md
concenews-backend/docs/spikes/polymarket-api/: LEARNINGS.md  MACRO_TAGS.md
concenews-backend/spikes/db/: LEARNINGS.md
concenews-backend/spikes/news_spikes/: LEARNINGS.md
concenews-backend/spikes/scheduler/: LEARNINGS.md
concenews-backend/src/: main.py
concenews-backend/src/modules/: __init__.py
concenews-backend/src/modules/market/: bootstrap.py
concenews-backend/src/modules/news/: bootstrap.py  public.py
concenews-backend/src/shared_kernel/db/: base.py  engine.py  session.py  settings.py
concenews-backend/tests/: conftest.py
concenews-backend/tests/integration/: conftest.py  test_market_migration.py  test_news_fetch_endpoint.py  test_shared_db.py
(+73 files in other folders)
