[project]
name = "concenews-backend"
version = "0.1.0"
description = "Portfolio: 금리/통화 뉴스 조회 및 마켓 데이터 매칭 플랫폼"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx2>=0.0.0",
]
